# pycon-au-23-demo-app

./: .gitignore  manage.py  pyproject.toml  requirements.txt
main/: models.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_alter_book_publish_date.py  0003_alter_specializations_slug_alter_tags_slug.py
pyconau23/: asgi.py  settings.py  urls.py  wsgi.py
pyconau23/main/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
pyconau23/pyconau23/: settings.py  urls.py
